# cjpeg

./: CMakeLists.txt  README.md
include/: rle.h
include/image/: channel.h  chroma_subsampling.h  color_space.h  image.h
include/utils/: file_io.h  macros.h  math.h
src/: main.c  rle.c
src/image/: chroma_subsampling.c  color_space.c  image.c
src/utils/: file_io.c
